--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/laccan_logo branca.png
+    - assets/logo-laccan-completa-branca.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,12 +74,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: RobotoSlab
+      fonts:
+        - asset: assets/font/RobotoSlab-Black.ttf
+          weight: 700
+        - asset: assets/font/RobotoSlab-Bold.ttf
+          weight: 600
+        - asset: assets/font/RobotoSlab-ExtraBold.ttf
+          weight: 800
+        - asset: assets/font/RobotoSlab-Medium.ttf
+        - asset: assets/font/RobotoSlab-Regular.ttf
+        - asset: assets/font/RobotoSlab-SemiBold.ttf
+        - asset: assets/font/RobotoSlab-Thin.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
