fix: fix draggable drag and drops text

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   file_picker: ^8.0.3
   dotted_border: ^2.1.0
+  flutter_dropzone: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +65,6 @@ flutter:
   assets:
     - assets/laccan_logo branca.png
     - assets/logo-laccan-completa-branca.png
-    - assets/1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
