--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   file_picker: ^8.0.3
   dotted_border: ^2.1.0
   flutter_dropzone: ^4.0.0
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
