--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   file_picker: ^8.0.3
   dotted_border: ^2.1.0
-  csv: ^6.0.0
   flutter_colorpicker: ^1.1.0
+  pdf: ^3.10.8
+  archive: ^3.6.0
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
   assets:
     - assets/laccan_logo branca.png
     - assets/logo-laccan-completa-branca.png
+    - assets/example.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
