--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pdf: ^3.10.8
   archive: ^3.6.0
   csv: ^6.0.0
+  printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,7 @@ flutter:
   assets:
     - assets/laccan_logo branca.png
     - assets/logo-laccan-completa-branca.png
-    - assets/example.csv
+    - assets/RobotoSlab-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -84,16 +85,16 @@ flutter:
   fonts:
     - family: RobotoSlab
       fonts:
-        - asset: assets/font/RobotoSlab-Black.ttf
+        - asset: assets/RobotoSlab-Black.ttf
           weight: 700
-        - asset: assets/font/RobotoSlab-Bold.ttf
+        - asset: assets/RobotoSlab-Bold.ttf
           weight: 600
-        - asset: assets/font/RobotoSlab-ExtraBold.ttf
+        - asset: assets/RobotoSlab-ExtraBold.ttf
           weight: 800
-        - asset: assets/font/RobotoSlab-Medium.ttf
-        - asset: assets/font/RobotoSlab-Regular.ttf
-        - asset: assets/font/RobotoSlab-SemiBold.ttf
-        - asset: assets/font/RobotoSlab-Thin.ttf
+        - asset: assets/RobotoSlab-Medium.ttf
+        - asset: assets/RobotoSlab-Regular.ttf
+        - asset: assets/RobotoSlab-SemiBold.ttf
+        - asset: assets/RobotoSlab-Thin.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
